--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "critters": "^0.0.23",
     "lucide-react": "^0.532.0",
     "next": "15.4.4",
     "react": "19.1.0",
